--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # v2 yerine v3 kullanıyoruz.
 
     - name: Copy files via SSH
       uses: appleboy/scp-action@v0.1.0
